added backend for search

--- a/ChatrTest/.classpath
+++ b/ChatrTest/.classpath
@@ -37,6 +37,8 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Coding/Java/Useful JARs/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/J/Desktop/ojdbc6.jar"/>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
 			<attribute name="ignore_optional_problems" value="true"/>
@@ -46,6 +48,5 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Coding/Java/Useful JARs/ojdbc6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
